--- a/content/posts/2024-08-24-一张水卡的数据解析及利用（m1卡破解）.md
+++ b/content/posts/2024-08-24-一张水卡的数据解析及利用（m1卡破解）.md
@@ -87,7 +87,7 @@ Block 3: 0B A1 1E 91 5B 81 7F 07 88 69 A9 DE 7F 3C EB 1F
 
 ## 利用
 
-先构建 M1 卡的结构
+先构建 M1 卡的结构。
 
 ```c
 // M1Card.h
@@ -122,7 +122,7 @@ typedef struct TM1CardSector {
 void M1Card_SetCardInfomation(PM1CardSector cardData, uint32_t uid, uint8_t sak, uint16_t atqa);
 ```
 
-实现 M1 卡制造商信息设置函数
+实现 M1 卡制造商信息设置函数。
 
 ```c
 // M1Card.c
@@ -138,7 +138,7 @@ void M1Card_SetCardInfomation(PM1CardSector cardData, uint32_t uid, uint8_t sak,
 }
 ```
 
-然后构建解析出的水卡的结构
+然后构建解析出的水卡的结构。
 
 ```c
 // WaterCard.h
@@ -176,7 +176,7 @@ typedef struct TWaterCardKeyA {
 void WaterCard_SetCard(PM1CardSector cardData, uint32_t uid, uint16_t amount);
 ```
 
-最后实现利用函数
+最后实现利用函数。
 
 ```c
 // WaterCard.c
@@ -236,7 +236,7 @@ void WaterCard_SetCard(PM1CardSector cardData, uint32_t uid, uint16_t amount) {
 }
 ```
 
-测试生成 Dump 文件
+测试生成 Dump 文件。
 
 ```c
 // Main.c
