--- a/content/posts/2024-08-24-使用-vs-code-作为-vc6-的编辑器.md
+++ b/content/posts/2024-08-24-使用-vs-code-作为-vc6-的编辑器.md
@@ -8,6 +8,7 @@ tags:
 categories:
     - 编程语言
 draft: false
+lightgallery: true
 ---
 
 ## 为什么呢
@@ -21,21 +22,21 @@ draft: false
 
 将编译器文件放置到一个**没有中文和空格的路径**，这里我的路径是 `E:/Library/VC98`。
 
-![](/images/Snipaste_2024-08-24_19-33-08.png)
+{{< image src="/images/Snipaste_2024-08-24_19-33-08.png" caption="工具链目录" >}}
 
 ## 配置 VS Code 编辑器环境
 
 1. 安装 C/C++ 插件。
 
-    ![](/images/Snipaste_2024-08-24_19-37-10.png)
+    {{< image src="/images/Snipaste_2024-08-24_19-37-10.png" caption="C/C++ 插件" >}}
 
 2. 安装 Code Runner 插件。
 
-    ![](/images/Snipaste_2024-08-24_19-38-35.png)
+    {{< image src="/images/Snipaste_2024-08-24_19-38-35.png" caption="Code Runner 插件" >}}
 
 3. 在~~自己的项目目录~~（想放哪就放哪qwq）建立一个新目录作为工作区存放需要用 VC6 编译的 C 语言文件，这里我放在了桌面 `D:\Desktop\VC6_C`。
 
-    ![](/images/Snipaste_2024-08-24_19-45-15.png)
+    {{< image src="/images/Snipaste_2024-08-24_19-45-15.png" caption="项目目录" >}}
 
 4. 在工作区中新建 `.vscode` 目录，并在其中新建 `settings.json`，内容为：
 
@@ -56,11 +57,11 @@ draft: false
 
 5. 在工作区中新建一个测试 C 文件，右键 `Run Code` 运行。
 
-    ![](/images/Snipaste_2024-08-24_19-48-39.png)
+    {{< image src="/images/Snipaste_2024-08-24_19-48-39.png" caption="右键运行" >}}
 
 6. 运行结果在底部终端窗口显示。
 
-    ![](/images/Snipaste_2024-08-24_19-42-31.png)
+    {{< image src="/images/Snipaste_2024-08-24_19-42-31.png" caption="运行结果" >}}
 
 ## 提取和制作 VC98 编译器工具（如果你感兴趣）
 
